# Changelog

## additions
- every playthrough won't have the same abilities for shinigami when you unlock shikai depending on your stats -or not- you might get other abilities
- dark ball ability
- shadow clone ability
- fire prowess ability
- fire coat ability
- damage heal ability
- second chance ability
- moonlight ability
- lunar blindness ability

## changes
- changed overall activation way (keys) for certain abilities, just check them out in game
- default darkstep cooldown 4 -> 6
- default cooldown umbral cloak 16 -> 20
- when having the 'proving yourself' quest as a spirit in the overworld your spirit chain does not diminish this is the quest to become a shinigami
- lunar blessing isn't infinite anymore it has a timer
- poison duration from poison attack from 100 ticks to 40 ticks

## fixed
- class points not working for quincy when switching races or something along those lines
### player overview screen bugs
- points not properly rendering for quincy
- button overlap for hollows
- points not properly rendering for shinigami

## misc
- refactored the attack ability code
- refactored the dependancy code for abilities aka easier to write, less hardcoded etc.
