@@ -7,8 +7,7 @@ import com.yuanno.soulsawakening.abilities.elements.fire.*;
 import com.yuanno.soulsawakening.abilities.elements.heal.*;
 import com.yuanno.soulsawakening.abilities.elements.lunar.*;
 import com.yuanno.soulsawakening.abilities.elements.normal.NormalBuffAbility;
-import com.yuanno.soulsawakening.abilities.elements.poison.AdrenalineCloudAbility;
-import com.yuanno.soulsawakening.abilities.elements.poison.VenomousCloudAbility;
+import com.yuanno.soulsawakening.abilities.elements.poison.*;
 import com.yuanno.soulsawakening.abilities.elements.shadow.*;
 import com.yuanno.soulsawakening.abilities.elements.thunder.ThunderStepAbility;
 import com.yuanno.soulsawakening.abilities.elements.thunder.ThunderAttackAbility;
@@ -37,7 +36,6 @@ import com.yuanno.soulsawakening.abilities.quincy.spear.SpearThrustAbility;
 import com.yuanno.soulsawakening.abilities.quincy.sword.SwordConcentrationAbility;
 import com.yuanno.soulsawakening.abilities.quincy.sword.SwordSlashAbility;
 import com.yuanno.soulsawakening.api.ability.Ability;
-import com.yuanno.soulsawakening.abilities.elements.poison.PoisonAttackAbility;
 import com.yuanno.soulsawakening.api.Beapi;
 import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.eventbus.api.IEventBus;
@@ -56,7 +54,7 @@ public class ModAbilities {
     public static final Ability[] THUNDER_ZANPAKUTO = new Ability[] {ThunderStepAbility.INSTANCE, ThunderAttackAbility.INSTANCE, ThunderStrikeAbility.INSTANCE};
     public static final Ability[] LUNAR_ZANPAKUTO = new Ability[] {LunarBlessingAbility.INSTANCE, LunarCrescentAbility.INSTANCE, LunarWaveAbility.INSTANCE, LunarBlindnessAbility.INSTANCE, MoonLightAbility.INSTANCE};
     public static final Ability[] NORMAL_ZANPAKUTO = new Ability[] {NormalBuffAbility.INSTANCE};
-    public static final Ability[] POISON_ZANPAKUTO = new Ability[] {PoisonAttackAbility.INSTANCE, VenomousCloudAbility.INSTANCE, AdrenalineCloudAbility.INSTANCE};
+    public static final Ability[] POISON_ZANPAKUTO = new Ability[] {PoisonAttackAbility.INSTANCE, VenomousCloudAbility.INSTANCE, AdrenalineCloudAbility.INSTANCE, PoisonStingAbility.INSTANCE, AntidoteAbility.INSTANCE};
     public static final Ability[] WATER_ZANPAKUTO = new Ability[] {AquaSlashAbility.INSTANCE, TidalWaveAbility.INSTANCE, WaterPrisonAbility.INSTANCE};
     public static final Ability[] WIND_ZANPAKUTO = new Ability[] {GaleForceAbility.INSTANCE, WhirldWindDanceAbility.INSTANCE, WindAttackAbility.INSTANCE};
     public static final Ability[] HOLLOW = new Ability[] {SlashAbility.INSTANCE, BiteAbility.INSTANCE, CeroAbility.INSTANCE, HollowRegenerationAbility.INSTANCE, GargantaAbility.INSTANCE, VastoHollowAbility.INSTANCE};
