@@ -10,6 +10,8 @@
 - second chance ability
 - moonlight ability
 - lunar blindness ability
+- antidote ability
+- poison sting ability
 
 ## changes
 - changed overall activation way (keys) for certain abilities, just check them out in game
